@@ -5,6 +5,7 @@
 * 2013-12-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
+ - Fix for bug 30357: Remove harmful "<%tag>" tags from HTML content id displayed inline
 
 * 2013-12-17 - jan.bauerdick@open-xchange.com
 
